assets/css/site.css
/* ... */
.paragraph-33, .paragraph-34, .paragraph-35, .paragraph-36 {
  margin-left: 10px;
  margin-right: 10px;
}

.paragraph-37 {
  margin-left: 10px;
}

.heading-28 {
  color: var(--dim-gray-3);
  margin-top: 40px;
}

.paragraph-38 {
  margin-top: 25px;
}

.bold-text-34, .bold-text-35, .bold-text-36, .bold-text-37, .bold-text-38, .bold-text-39 {
  color: var(--goldenrod);
}

.image-51 {
  margin-bottom: 20px;
}

.italic-text-65, .italic-text-66 {
  color: var(--goldenrod);
}

.heading-29 {
  color: var(--dim-gray-3);
  margin-bottom: 10px;
}

.paragraph-39 {
  margin-bottom: 25px;
}

.image-52 {
  margin-top: 20px;
}

.image-53 {
  margin-top: 10px;
}

.bold-text-40, .bold-text-41, .bold-text-42, .bold-text-43, .bold-text-44, .bold-text-45 {
  color: var(--goldenrod);
}

.image-54, .image-55 {
  margin-bottom: 20px;
}

.image-56 {
  margin-bottom: 60px;
}

.heading-30, .heading-31 {
  margin-top: 0;
}

.image-57 {
  margin-bottom: 20px;
}

.image-58 {
  margin-bottom: 40px;
}

.paragraph-40 {
  text-align: justify;
}

.heading-32 {
  margin-top: 20px;
  overflow: visible;
}

.main-container {
  max-width: 90%;
  padding-left: 40px;
  padding-right: 40px;
}

.paragraph-41 {
  color: #242223;
  background-color: #efefeb;
  margin-bottom: 0;
  padding-bottom: 15px;
  padding-left: 10px;
}

.video {
  max-height: 784px;
}

@media screen and (min-width: 1440px) {
  .content-wrapper {
    position: static;
  }

  .columns-4 {
    max-width: 100%;
    position: relative;
    left: 5%;
  }

  .container, .container-2 {
    max-width: 90%;
  }

  .image-59 {
    vertical-align: sub;
    display: block;
  }

  .image-60 {
    display: block;
  }
}

@media screen and (max-width: 991px) {
  .navigation-link {
    text-align: center;
    color: #fff;
  }

  .navigation-link:hover {
    color: var(--webstylelightblue);
    background-color: #fff;
  }

  .navigation-bar {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  .navigation-menu {
    background-color: #c8c8c8;
    border-bottom: 1px solid #b0b0b0;
  }

  .site-name {
    margin-top: 13px;
  }

  .post-wrapper {
    margin-bottom: 20px;
  }

  .blog-image {
    height: 140px;
  }

  .content-wrapper {
    padding: 20px;
  }

  .white-wrapper {
    padding: 14px;
  }

  .menu-button {
    padding: 15px;
  }

  .white-bg-heading {
    margin-bottom: 20px;
  }

  .content-column {
    padding-left: 10px;
  }

  .blog-page-image {
    height: 240px;
  }
}

@media screen and (max-width: 767px) {
  .navigation-bar {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .grey-rule {
    margin-top: 21px;
    margin-bottom: 21px;
  }

  .built-with-webflow {
    margin-bottom: 0;
  }

  .post-wrapper {
    margin-bottom: 20px;
    margin-left: 0;
  }

  .blog-image {
    margin-bottom: 20px;
    margin-right: 0;
  }

  .post-content {
    padding: 20px;
  }

  .button-wrapper {
    text-align: center;
  }

  .content-wrapper {
    width: 100%;
    margin-left: 0;
    padding: 20px 10px;
  }

  .blog-title {
    font-size: 27px;
    line-height: 36px;
  }

  .white-wrapper {
    margin-top: 20px;
    padding: 34px;
  }

  .blog-page-image {
    height: 220px;
  }

  .sidebar-on-mobile {
    padding-top: 0;
    display: block;
  }
}

@media screen and (max-width: 479px) {
  h1 {
    font-size: 32px;
    line-height: 36px;
  }

  .blog-image {
    height: 190px;
  }

  .blog-title {
    font-size: 26px;
    line-height: 32px;
  }

  .white-wrapper {
    padding: 20px;
  }

  .blog-page-image {
    height: 210px;
  }
}

